--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://tumms-net.asusscomm.com:5432/dw_block_captain_utility
+spring.datasource.url=jdbc:postgresql://192.168.1.254:5432/dw_block_captain_utility
 spring.datasource.username=postgres
 spring.datasource.password=bitnami
 
