--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.datasource.username=postgres
 spring.datasource.password=bitnami
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=com.tummsmedia.BlockCaptainUtility.hibernate.CustomPostgreSqlDialect
